--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
       </section>
     </main>
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./">WebStudio</a>
       <address>г. Киев, пр-т Леси Украинки, 26</address>
       <a href="mailto:info@example.com">info@example.com</a>
       <a href="tel:+380961111111">+38 099 111 11 11</a>
