--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a href="/">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="">Студия</a></li>
@@ -115,10 +115,12 @@
       </section>
     </main>
     <footer>
-      <a href="./">WebStudio</a>
-      <address>г. Киев, пр-т Леси Украинки, 26</address>
-      <a href="mailto:info@example.com">info@example.com</a>
-      <a href="tel:+380961111111">+38 099 111 11 11</a>
+      <a href="./index.html">WebStudio</a>
+      <address>
+        <p>г. Киев, пр-т Леси Украинки, 26</p>
+        <a href="mailto:info@example.com">info@example.com</a> <br />
+        <a href="tel:+380961111111">+38 099 111 11 11</a>
+      </address>
     </footer>
   </body>
 </html>
